mesh/mesh-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mesh-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "tu-dominio"
    - "*.tu-dominio"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: secret-mesh-certificate
      minProtocolVersion: TLSV1_2
    hosts:
    - 'tu-dominio.com'
    - '*.tu-dominio.com'
