mesh/deploy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fastapi-service-v1-stable
spec:
  host: "fastapi-service-v1-stable.default.svc.cluster.local"
  subsets:
  - name: v1
    labels:
      version: v1
      channel: stable

---

apiVersion: v1
kind: Service
metadata:
  name:  fastapi-service-v1-stable
  namespace: default 
spec:
  type: ClusterIP
  selector:
    app: fastapi-service
    version: v1
    channel: stable
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-service-v1-stable
  namespace: default 
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  fastapi-service
      version: v1
      channel: stable
      auth: jwt  
  template:
    metadata:
      labels:
        app: fastapi-service
        version: v1
        channel: stable
        auth: jwt  
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/rewriteAppHTTPProbers: "false"  
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/hello-app:1.0
          imagePullPolicy: IfNotPresent 
          ports:
          - containerPort: 8080

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fastapi-service-v1-stable-vs
  namespace: default
spec:
  hosts:
  - "fastapi-service.tu-dominio"
  gateways:
    - istio-system/mesh-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: "fastapi-service-v1-stable.default.svc.cluster.local"
        port:
          number: 80
        subset: v1
